data_service[fix]: refactor features creating, add user_tables
