# user_data_service/docs/swagger.json
@@ -7,12 +7,12 @@
     },
     "basePath": "/api/v1/",
     "paths": {
-        "/save_csv": {
+        "/face_model/save_features": {
             "post": {
                 "tags": [
                     "Save CSV"
                 ],
-                "summary": "Принимает csv файл и сохраняет информацию в БД",
+                "summary": "Принимает csv файл с фичами из видео",
                 "operationId": "save csv",
                 "parameters": [
                     {
